--- a/style.css
+++ b/style.css
@@ -90,4 +90,215 @@
     font-size: 0.8rem;
     max-width: 80%;
   }
+  .program {
+    background-image: url("images/programs-bg.png");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 50px 24px;
+  }
+  
+  .main-program {
+    text-align: center;
+  }
+  
+  .small-underline {
+    background-color: #ec5242;
+    width: 60px;
+    height: 2px;
+    margin: 0 auto;
+  }
+  
+  .program-list {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  
+  .image-icon {
+    width: 60px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ec5242;
+  }
+  
+  .program-card {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    width: 100%;
+    background: rgba(211, 211, 211, 0.2);
+    padding: 12px;
+    font-size: 0.8rem;
+  }
+  
+  .program-card img {
+    width: 85px;
+    height: auto;
+    border-radius: 50%;
+  }
+  
+  .program-card h3 {
+    flex: 0 0 30%;
+  }
+  
+  button.join {
+    padding: 30px 15px;
+    background-color: #ec5242;
+    font-size: 1.5rem;
+    margin-top: 30px;
+  }
+  
+  button:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
+  
+  .lecturer-list {
+    text-align: center;
+    padding: 24px;
+  }
+  
+  .lecturer-grid {
+    margin: 50px 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    row-gap: 50px;
+  }
+  
+  .lecturer {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+  
+  .lecturer-pix {
+    width: 40%;
+    display: flex;
+  }
+  
+  .lecturer-pix > .behind {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .lecturer-pix > .front {
+    width: 80%;
+    height: auto;
+    margin-top: 35px;
+    margin-left: -60px;
+  }
+  
+  .specialization {
+    text-align: justify;
+    font-size: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 60%;
+  }
+  
+  .specialization hr {
+    width: 30px;
+  }
+  
+  .partners {
+    text-align: center;
+    padding: 24px;
+    background-color: #272a31;
+  }
+  
+  .partner-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    margin: 24px auto;
+  }
+  
+  .partner-list img {
+    width: 30%;
+    height: auto;
+  }
+  
+  footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+  }
+  
+  .mobile-more {
+    display: none;
+  }
+  
+  .more {
+    padding: 8px;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border: 2px solid #d3d3d3;
+  }
+  
+  .more:hover {
+    background-color: #d3d3d3;
+  }
+  
+  .non-display {
+    display: none;
+  }
+  
+  .desktop {
+    display: none;
+  }
+  
+  .menu {
+    position: fixed;
+    top: 0;
+    background: #d3d3d3;
+    width: 100%;
+    height: 100vh;
+    z-index: 99;
+  }
+  
+  .menu .list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    font-size: 2rem;
+    align-items: center;
+    margin: 30px;
+  }
+  
+  .list .close {
+    align-self: flex-end;
+  }
+  
+  .link {
+    text-decoration: none;
+  }
+  
+  .link:hover {
+    opacity: 0.7;
+  }
+  
+  .register {
+    border: 4px solid #ec5242;
+    padding: 8px;
+  }
+  
+  .link2 {
+    color: #272a31;
+  }
+  
+  .about,
+  .register {
+    color: #ec5242;
+  }
+  
   
