--- a/style.css
+++ b/style.css
@@ -301,4 +301,95 @@
     color: #ec5242;
   }
   
+  /* About mobile page */
+.top-section.aboutpg {
+    background-image: url("images/about-mobile.png");
+    background-size: contain;
+    background-position: 10px 6vh;
+    background-repeat: no-repeat;
+    background-color: #d3d3d3;
+  }
+  .small-underline.aboutpg{
+    width:20px;
+  }
+  
+  .tech-explain.aboutpg {
+    max-width: 100%;
+    background-color: #fff;
+    text-align: center;
+  }
+  
+  .contact {
+    text-align: center;
+  }
+  
+  .contact > a {
+    text-decoration: none;
+  }
+  
+  .About-logo {
+    padding: 50px 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+  }
+  
+  .logo-design {
+    border: 1px solid #d3d3d3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 24px;
+  }
+  
+  .logo-head {
+    font-style: italic;
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+    font-size: 2rem;
+  }
+  
+  .logo-date {
+    font-size: 0.8rem;
+  }
+  
+  .logo-line {
+    margin-top: 5px;
+    width: 230px;
+  }
+  
+  .past-training {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+    text-align: center;
+    padding: 50px 24px;
+  }
+  
+  .training-pictures {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .annual{
+    width:100%;
+    height: auto;
+  }
+  
+  .annual-pix{
+    width: 100%;
+    height: auto;
+    filter: grayscale(50%) brightness(100%) contrast(50%) ;
+  }
+  .text-top {
+    position: relative;
+    top: -50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    color:red;
+    
+  }
   
