--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@
   .register {
     color: #ec5242;
   }
-  
+
   /* About mobile page */
 .top-section.aboutpg {
     background-image: url("images/about-mobile.png");
@@ -390,6 +390,134 @@
     transform: translate(-50%, -50%);
     z-index: 9;
     color:red;
-    
+
   }
+
+  
+@media screen and (min-width: 768px) {
+    .desktop {
+      display: block;
+    }
+  
+    .mobile {
+      display: none;
+    }
+  
+    .first-header {
+      background: #272a31;
+      padding: 0 10%;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 23;
+    }
+  
+    .list {
+      list-style: none;
+      display: flex;
+      justify-content: flex-end;
+      gap: 15px;
+    }
+  
+    .link {
+      text-decoration: none;
+      color: #d3d3d3;
+      font-size: 0.7rem;
+    }
+  
+    .list .fa {
+      font-size: 1.1rem;
+    }
+  
+    .second-header {
+      padding: 34px 10% 3px 10%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: fixed;
+      background: #fff;
+      width: 100%;
+      z-index: 10;
+    }
+  
+    .link2 {
+      font-size: 1rem;
+      color: #272a31;
+    }
+  
+    .about,
+    .register {
+      color: #ec5242;
+    }
+  
+    .top-section {
+      padding: 6px 10% 150px 10%;
+      background-image: url("images/desktop-bg.png");
+      background-position: 0 80px;
+      gap: 20px;
+    }
+  
+    .main-heading {
+      font-size: 4rem;
+    }
+  
+    .sub-heading {
+      margin-top: 200px;
+    }
+  
+    .tech-explain {
+      max-width: 55%;
+    }
+  
+    .program {
+      padding: 50px 10%;
+    }
+  
+    .program-list {
+      flex-direction: row;
+    }
+  
+    .program-card {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .program-card h3 {
+      flex: 0 0 10%;
+    }
+  
+    .see-program {
+      margin-top: 50px;
+    }
+  
+    .see-program a {
+      text-align: center;
+    }
+  
+    .lecturer-list {
+      padding: 24px 10%;
+    }
+  
+    .lecturer-grid {
+      margin: 50px 0;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px 30px;
+    }
+  
+    .partners {
+      padding: 24px 10%;
+    }
+  
+    .partner-list {
+      justify-content: center;
+      gap: 20px;
+      margin: 24px auto;
+    }
+  
+    .partner-list img {
+      width: 12%;
+      height: auto;
+    }
+}
   
