--- a/style.css
+++ b/style.css
@@ -519,5 +519,51 @@
       width: 12%;
       height: auto;
     }
+    
+     /* About desktop page */
+  .top-section.aboutpg {
+    background-image: url("images/about-desktop.png");
+    background-size: contain;
+    background-position: center;
+    gap: 100px;
+    padding: 100px 15% 50px 10%;
+  }
+
+  .main-heading.aboutpg {
+    margin-left: 100px;
+    font-size: 3rem;
+    margin-top: 100px;
+  }
+
+  .tech-explain.aboutpg {
+    line-height: 30px;
+    padding: 24px 50px;
+  }
+
+  .About-logo {
+    padding: 50px 15%;
+  }
+
+  .logo-design {
+    max-width: 50%;
+    padding: 24px 50px;
+  }
+
+  .training-pictures {
+    flex-direction: row;
+    padding: 0 15%;
+    /* margin: 50px; */
+  }
+  /* .training-pictures img{
+    width:100%;
+    height: auto;
+  } */
+
+  
+  footer.aboutpg {
+    background: #272a31;
+    color: #d3d3d3;
+    padding: 24px 15%;
+  }
 }
   
