--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@
   .menu {
     position: fixed;
     top: 0;
-    background: #d3d3d3;
+    background-image: url('images/mobile-background.png');
     width: 100%;
     height: 100vh;
     z-index: 99;
