--- a/style.css
+++ b/style.css
@@ -1,532 +1,535 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  body {
-    font-family: "COCOGOOSE", sans-serif;
-  }
-  
-  .red {
-    color: #ec5242;
-  }
-  
-  .dark {
-    color: #272a31;
-  }
-  
-  .white {
-    color: #d3d3d3;
-  }
-  
-  .opaque {
-    opacity: 0.7;
-  }
-  
-  span {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .top-section {
-    background-image: url("images/mobile-background.png");
-    background-size: contain;
-    padding: 6px 24px 150px 24px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .bar {
-    background: #272a31;
-    width: 40px;
-    height: 6px;
-  }
-  
-  .hamburger {
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    padding: 24px 0;
-    margin-bottom: 20px;
-  }
-  
-  .hamburger:hover {
-    cursor: pointer;
-  }
-  
-  .logo {
-    font-style: italic;
-    font-size: 1.5rem;
-    border: 2px solid #ec5242;
-    padding: 12px;
-    border-radius: 50%;
-    line-height: 20px;
-  }
-  
-  .logo a {
-    text-decoration: none;
-  }
-  
-  .year {
-    font-size: 0.9rem;
-    text-align: center;
-    font-weight: 900;
-  }
-  
-  .sub-heading {
-    font-size: 1.5rem;
-  }
-  
-  .main-heading {
-    font-size: 2.8rem;
-    text-transform: uppercase;
-    line-height: 70px;
-  }
-  
-  .tech-explain {
-    border: 4px solid #fff;
-    padding: 24px;
-    font-size: 0.8rem;
-    max-width: 80%;
-  }
-  .program {
-    background-image: url("images/programs-bg.png");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 50px 24px;
-  }
-  
-  .main-program {
-    text-align: center;
-  }
-  
-  .small-underline {
-    background-color: #ec5242;
-    width: 60px;
-    height: 2px;
-    margin: 0 auto;
-  }
-  
-  .program-list {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-  
-  .image-icon {
-    width: 60px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #ec5242;
-  }
-  
-  .program-card {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    width: 100%;
-    background: rgba(211, 211, 211, 0.2);
-    padding: 12px;
-    font-size: 0.8rem;
-  }
-  
-  .program-card img {
-    width: 85px;
-    height: auto;
-    border-radius: 50%;
-  }
-  
-  .program-card h3 {
-    flex: 0 0 30%;
-  }
-  
-  button.join {
-    padding: 30px 15px;
-    background-color: #ec5242;
-    font-size: 1.5rem;
-    margin-top: 30px;
-  }
-  
-  button:hover {
-    cursor: pointer;
-    opacity: 0.7;
-  }
-  
-  .lecturer-list {
-    text-align: center;
-    padding: 24px;
-  }
-  
-  .lecturer-grid {
-    margin: 50px 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    row-gap: 50px;
-  }
-  
-  .lecturer {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
-  
-  .lecturer-pix {
-    width: 40%;
-    display: flex;
-  }
-  
-  .lecturer-pix > .behind {
-    width: 80px;
-    height: 80px;
-  }
-  
-  .lecturer-pix > .front {
-    width: 80%;
-    height: auto;
-    margin-top: 35px;
-    margin-left: -60px;
-  }
-  
-  .specialization {
-    text-align: justify;
-    font-size: 0.8rem;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 60%;
-  }
-  
-  .specialization hr {
-    width: 30px;
-  }
-  
-  .partners {
-    text-align: center;
-    padding: 24px;
-    background-color: #272a31;
-  }
-  
-  .partner-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: center;
-    margin: 24px auto;
-  }
-  
-  .partner-list img {
-    width: 30%;
-    height: auto;
-  }
-  
-  footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 24px;
-  }
-  
-  .mobile-more {
-    display: none;
-  }
-  
-  .more {
-    padding: 8px;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #fff;
-    border: 2px solid #d3d3d3;
-  }
-  
-  .more:hover {
-    background-color: #d3d3d3;
-  }
-  
-  .non-display {
-    display: none;
-  }
-  
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "COCOGOOSE", sans-serif;
+}
+
+.red {
+  color: #ec5242;
+}
+
+.dark {
+  color: #272a31;
+}
+
+.white {
+  color: #d3d3d3;
+}
+
+.opaque {
+  opacity: 0.7;
+}
+
+span {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.top-section {
+  background-image: url("images/mobile-background.png");
+  background-size: contain;
+  padding: 6px 24px 150px 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.bar {
+  background: #272a31;
+  width: 40px;
+  height: 6px;
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  padding: 24px 0;
+  margin-bottom: 20px;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+.logo {
+  font-style: italic;
+  font-size: 1.5rem;
+  border: 2px solid #ec5242;
+  padding: 12px;
+  border-radius: 50%;
+  line-height: 20px;
+}
+
+.logo a {
+  text-decoration: none;
+}
+
+.year {
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 900;
+}
+
+.sub-heading {
+  font-size: 1.5rem;
+}
+
+.main-heading {
+  font-size: 2.8rem;
+  text-transform: uppercase;
+  line-height: 70px;
+}
+
+.tech-explain {
+  border: 4px solid #fff;
+  padding: 24px;
+  font-size: 0.8rem;
+  max-width: 80%;
+}
+
+.program {
+  background-image: url("images/programs-bg.png");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 50px 24px;
+}
+
+.main-program {
+  text-align: center;
+}
+
+.small-underline {
+  background-color: #ec5242;
+  width: 60px;
+  height: 2px;
+  margin: 0 auto;
+}
+
+.program-list {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.image-icon {
+  width: 60px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ec5242;
+}
+
+.program-card {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
+  background: rgba(211, 211, 211, 0.2);
+  padding: 12px;
+  font-size: 0.8rem;
+}
+
+.program-card img {
+  width: 85px;
+  height: auto;
+  border-radius: 50%;
+}
+
+.program-card h3 {
+  flex: 0 0 30%;
+}
+
+button.join {
+  padding: 30px 15px;
+  background-color: #ec5242;
+  font-size: 1.5rem;
+  margin-top: 30px;
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.lecturer-list {
+  text-align: center;
+  padding: 24px;
+}
+
+.lecturer-grid {
+  margin: 50px 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  row-gap: 50px;
+}
+
+.lecturer {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.lecturer-pix {
+  width: 40%;
+  display: flex;
+}
+
+.lecturer-pix > .behind {
+  width: 80px;
+  height: 80px;
+}
+
+.lecturer-pix > .front {
+  width: 80%;
+  height: auto;
+  margin-top: 35px;
+  margin-left: -60px;
+}
+
+.specialization {
+  text-align: justify;
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 60%;
+}
+
+.specialization hr {
+  width: 30px;
+}
+
+.partners {
+  text-align: center;
+  padding: 24px;
+  background-color: #272a31;
+}
+
+.partner-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  margin: 24px auto;
+}
+
+.partner-list img {
+  width: 30%;
+  height: auto;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+}
+
+.mobile-more {
+  display: none;
+}
+
+.more {
+  padding: 8px;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  border: 2px solid #d3d3d3;
+}
+
+.more:hover {
+  background-color: #d3d3d3;
+}
+
+.non-display {
+  display: none;
+}
+
+.desktop {
+  display: none;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  background-image: url('images/mobile-background.png');
+  width: 100%;
+  height: 100vh;
+  z-index: 99;
+}
+
+.menu .list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  font-size: 2rem;
+  align-items: center;
+  margin: 30px;
+}
+
+.list .close {
+  align-self: flex-end;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:hover {
+  opacity: 0.7;
+}
+
+.register {
+  border: 4px solid #ec5242;
+  padding: 8px;
+}
+
+.link2 {
+  color: #272a31;
+}
+
+.about,
+.register {
+  color: #ec5242;
+}
+
+/* About mobile page */
+.top-section.aboutpg {
+  background-image: url("images/about-mobile.png");
+  background-size: contain;
+  background-position: 10px 6vh;
+  background-repeat: no-repeat;
+  background-color: #d3d3d3;
+}
+
+.small-underline.aboutpg {
+  width: 20px;
+}
+
+.tech-explain.aboutpg {
+  max-width: 100%;
+  background-color: #fff;
+  text-align: center;
+}
+
+.contact {
+  text-align: center;
+}
+
+.contact > a {
+  text-decoration: none;
+}
+
+.About-logo {
+  padding: 50px 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+}
+
+.logo-design {
+  border: 1px solid #d3d3d3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 24px;
+}
+
+.logo-head {
+  font-style: italic;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 2rem;
+}
+
+.logo-date {
+  font-size: 0.8rem;
+}
+
+.logo-line {
+  margin-top: 5px;
+  width: 230px;
+}
+
+.past-training {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  text-align: center;
+  padding: 50px 24px;
+}
+
+.training-pictures {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.annual1,
+.annual2 {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+}
+
+.annual1 {
+  background-image: url('images/summit-2022.jpeg');
+}
+
+.annual2 {
+  background-image: url('images/summit-2021.jpg');
+}
+
+.annual-bgCover {
+  width: 100%;
+  height: 300px;
+  background: rgba(236, 82, 66, 0.5);
+}
+
+.text-top {
+  padding-top: 30%;
+  font-size: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
   .desktop {
+    display: block;
+  }
+
+  .mobile {
     display: none;
   }
-  
-  .menu {
+
+  .first-header {
+    background: #272a31;
+    padding: 0 10%;
     position: fixed;
     top: 0;
-    background-image: url('images/mobile-background.png');
     width: 100%;
-    height: 100vh;
-    z-index: 99;
+    z-index: 23;
   }
-  
-  .menu .list {
+
+  .list {
     list-style: none;
     display: flex;
-    flex-direction: column;
-    gap: 50px;
-    font-size: 2rem;
-    align-items: center;
-    margin: 30px;
+    justify-content: flex-end;
+    gap: 15px;
   }
-  
-  .list .close {
-    align-self: flex-end;
-  }
-  
+
   .link {
     text-decoration: none;
+    color: #d3d3d3;
+    font-size: 0.7rem;
   }
-  
-  .link:hover {
-    opacity: 0.7;
+
+  .list .fa {
+    font-size: 1.1rem;
   }
-  
-  .register {
-    border: 4px solid #ec5242;
-    padding: 8px;
+
+  .second-header {
+    padding: 34px 10% 3px 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    background: #fff;
+    width: 100%;
+    z-index: 10;
   }
-  
+
   .link2 {
+    font-size: 1rem;
     color: #272a31;
   }
-  
+
   .about,
   .register {
     color: #ec5242;
   }
 
-  /* About mobile page */
-.top-section.aboutpg {
-    background-image: url("images/about-mobile.png");
-    background-size: contain;
-    background-position: 10px 6vh;
-    background-repeat: no-repeat;
-    background-color: #d3d3d3;
+  .top-section {
+    padding: 6px 10% 150px 10%;
+    background-image: url("images/desktop-bg.png");
+    background-position: 0 80px;
+    gap: 20px;
   }
-  .small-underline.aboutpg{
-    width:20px;
+
+  .main-heading {
+    font-size: 4rem;
   }
-  
-  .tech-explain.aboutpg {
-    max-width: 100%;
-    background-color: #fff;
+
+  .sub-heading {
+    margin-top: 200px;
+  }
+
+  .tech-explain {
+    max-width: 55%;
+  }
+
+  .program {
+    padding: 50px 10%;
+  }
+
+  .program-list {
+    flex-direction: row;
+  }
+
+  .program-card {
+    flex-direction: column;
     text-align: center;
   }
-  
-  .contact {
+
+  .program-card h3 {
+    flex: 0 0 10%;
+  }
+
+  .see-program {
+    margin-top: 50px;
+  }
+
+  .see-program a {
     text-align: center;
   }
-  
-  .contact > a {
-    text-decoration: none;
+
+  .lecturer-list {
+    padding: 24px 10%;
   }
-  
-  .About-logo {
-    padding: 50px 24px;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    align-items: center;
+
+  .lecturer-grid {
+    margin: 50px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px 30px;
   }
-  
-  .logo-design {
-    border: 1px solid #d3d3d3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding: 24px;
+
+  .partners {
+    padding: 24px 10%;
   }
-  
-  .logo-head {
-    font-style: italic;
-    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-    font-size: 2rem;
+
+  .partner-list {
+    justify-content: center;
+    gap: 20px;
+    margin: 24px auto;
   }
-  
-  .logo-date {
-    font-size: 0.8rem;
-  }
-  
-  .logo-line {
-    margin-top: 5px;
-    width: 230px;
-  }
-  
-  .past-training {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    align-items: center;
-    text-align: center;
-    padding: 50px 24px;
-  }
-  
-  .training-pictures {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    
-  }
-  .annual1,.annual2{
-    background-repeat: no-repeat;
-    background-size: cover;
-    width:100%;
+
+  .partner-list img {
+    width: 12%;
     height: auto;
   }
-  .annual1{
-    background-image: url('images/summit-2022.jpeg'); 
-  }
-  .annual2{
-    background-image: url('images/summit-2021.jpg');
-  }
-  
-  .annual-bgCover{
-    width:100%;
-    height: 300px;
-    background: rgba(236, 82, 66,0.5);
-  }
 
-  .text-top {
-    padding-top: 30%;
-    font-size: 1.5rem;
-
-  }
-
-  
-@media screen and (min-width: 768px) {
-    .desktop {
-      display: block;
-    }
-  
-    .mobile {
-      display: none;
-    }
-  
-    .first-header {
-      background: #272a31;
-      padding: 0 10%;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 23;
-    }
-  
-    .list {
-      list-style: none;
-      display: flex;
-      justify-content: flex-end;
-      gap: 15px;
-    }
-  
-    .link {
-      text-decoration: none;
-      color: #d3d3d3;
-      font-size: 0.7rem;
-    }
-  
-    .list .fa {
-      font-size: 1.1rem;
-    }
-  
-    .second-header {
-      padding: 34px 10% 3px 10%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: fixed;
-      background: #fff;
-      width: 100%;
-      z-index: 10;
-    }
-  
-    .link2 {
-      font-size: 1rem;
-      color: #272a31;
-    }
-  
-    .about,
-    .register {
-      color: #ec5242;
-    }
-  
-    .top-section {
-      padding: 6px 10% 150px 10%;
-      background-image: url("images/desktop-bg.png");
-      background-position: 0 80px;
-      gap: 20px;
-    }
-  
-    .main-heading {
-      font-size: 4rem;
-    }
-  
-    .sub-heading {
-      margin-top: 200px;
-    }
-  
-    .tech-explain {
-      max-width: 55%;
-    }
-  
-    .program {
-      padding: 50px 10%;
-    }
-  
-    .program-list {
-      flex-direction: row;
-    }
-  
-    .program-card {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    .program-card h3 {
-      flex: 0 0 10%;
-    }
-  
-    .see-program {
-      margin-top: 50px;
-    }
-  
-    .see-program a {
-      text-align: center;
-    }
-  
-    .lecturer-list {
-      padding: 24px 10%;
-    }
-  
-    .lecturer-grid {
-      margin: 50px 0;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px 30px;
-    }
-  
-    .partners {
-      padding: 24px 10%;
-    }
-  
-    .partner-list {
-      justify-content: center;
-      gap: 20px;
-      margin: 24px auto;
-    }
-  
-    .partner-list img {
-      width: 12%;
-      height: auto;
-    }
-
-     /* About desktop page */
+  /* About desktop page */
   .top-section.aboutpg {
     background-image: url("images/about-desktop.png");
     background-size: contain;
@@ -560,6 +563,7 @@
     padding: 0 15%;
 
   } */
+
   /* .training-pictures img{
     width:100%;
     height: auto;
@@ -574,4 +578,3 @@
     padding: 24px 15%;
   }
 }
-  
