--- a/style.css
+++ b/style.css
@@ -291,17 +291,15 @@ footer {
 .register {
   border: 4px solid #ec5242;
   padding: 8px;
+  color: #ec5242;
 }
 
 .link2 {
   color: #272a31;
 }
-.selected{
-  color: red !important;
 
-}
-.register {
-  color: #ec5242;
+.selected {
+  color: red !important;
 }
 
 /* About mobile page */
@@ -548,6 +546,7 @@ footer {
     margin-left: 100px;
     font-size: 3rem;
     margin-top: 100px;
+    text-align: center;
   }
 
   .tech-explain.aboutpg {
